tests/files/parser_tests/should_fail/099.cmdr
//Should not parse incorrect type format
type 1 = int;